// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graph #visitor should visit a model manager 1`] = `
"flowchart LR
   \`org.acme.hr.base@1.0.0.Category\`
   \`org.acme.hr.base@1.0.0.Category\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr.base@1.0.0.GeneralCategory\` --> \`org.acme.hr.base@1.0.0.Category\`
   \`org.acme.hr.base@1.0.0.State\`
   \`org.acme.hr.base@1.0.0.State\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.TShirtSizeType\`
   \`org.acme.hr.base@1.0.0.TShirtSizeType\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.EmployeeTShirtSizes\`
   \`org.acme.hr.base@1.0.0.EmployeeTShirtSizes\` --> \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr.base@1.0.0.EmployeeTShirtSizes\` --> \`org.acme.hr.base@1.0.0.TShirtSizeType\`
   \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr.base@1.0.0.Address\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.Address\` --> \`org.acme.hr.base@1.0.0.State\`
   \`org.acme.hr.base@1.0.0.Level\`
   \`org.acme.hr.base@1.0.0.Level\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.Time\`
   \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr@1.0.0.pii\`
   \`org.acme.hr@1.0.0.pii\` --> \`concerto.decorator@1.0.0.Decorator\`
   \`org.acme.hr@1.0.0.pii\` --> \`org.acme.hr@1.0.0.Category\`
   \`concerto.decorator@1.0.0.Decorator\`
   \`org.acme.hr@1.0.0.Category\`
   \`org.acme.hr@1.0.0.Category\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.Info\`
   \`org.acme.hr@1.0.0.Info\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.Info\` --> \`org.acme.hr@1.0.0.pii\`
   \`org.acme.hr@1.0.0.Info\` --> \`org.acme.hr@1.0.0.Category\`
   \`org.acme.hr@1.0.0.CompanyProperties\`
   \`org.acme.hr@1.0.0.CompanyProperties\` --> \`String\`
   \`org.acme.hr@1.0.0.EmployeeLoginTimes\`
   \`org.acme.hr@1.0.0.EmployeeLoginTimes\` --> \`String\`
   \`org.acme.hr@1.0.0.EmployeeLoginTimes\` --> \`org.acme.hr.base@1.0.0.Time\`
   \`org.acme.hr@1.0.0.EmployeeSocialSecurityNumbers\`
   \`org.acme.hr@1.0.0.EmployeeSocialSecurityNumbers\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.EmployeeSocialSecurityNumbers\` --> \`String\`
   \`org.acme.hr@1.0.0.EmployeeSocialSecurityNumbers\` --> \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr@1.0.0.NextOfKin\`
   \`org.acme.hr@1.0.0.NextOfKin\` --> \`org.acme.hr@1.0.0.KinName\`
   \`org.acme.hr@1.0.0.NextOfKin\` --> \`org.acme.hr@1.0.0.KinTelephone\`
   \`org.acme.hr@1.0.0.EmployeeProfiles\`
   \`org.acme.hr@1.0.0.EmployeeProfiles\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.EmployeeProfiles\` --> \`String\`
   \`org.acme.hr@1.0.0.EmployeeProfiles\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.EmployeeDirectory\`
   \`org.acme.hr@1.0.0.EmployeeDirectory\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.EmployeeDirectory\` --> \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr@1.0.0.EmployeeDirectory\` --> \`org.acme.hr@1.0.0.Employee\`
   \`org.acme.hr@1.0.0.Company\`
   \`org.acme.hr@1.0.0.Company\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr@1.0.0.CompanyProperties\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr@1.0.0.EmployeeDirectory\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr.base@1.0.0.EmployeeTShirtSizes\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr@1.0.0.EmployeeProfiles\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr@1.0.0.EmployeeSocialSecurityNumbers\`
   \`org.acme.hr@1.0.0.Department\`
   \`org.acme.hr@1.0.0.Department\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.Department\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.Equipment\`
   \`org.acme.hr@1.0.0.Equipment\` --> \`concerto@1.0.0.Asset\`
   \`concerto@1.0.0.Asset\`
   \`org.acme.hr@1.0.0.LaptopMake\`
   \`org.acme.hr@1.0.0.LaptopMake\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.Laptop\`
   \`org.acme.hr@1.0.0.Laptop\` --> \`org.acme.hr@1.0.0.Equipment\`
   \`org.acme.hr@1.0.0.Laptop\` --> \`org.acme.hr@1.0.0.LaptopMake\`
   \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.Person\` --> \`concerto@1.0.0.Participant\`
   \`org.acme.hr@1.0.0.Person\` --> \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr@1.0.0.Person\` --> \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr@1.0.0.Person\` --> \`org.acme.hr@1.0.0.NextOfKin\`
   \`concerto@1.0.0.Participant\`
   \`org.acme.hr@1.0.0.Employee\`
   \`org.acme.hr@1.0.0.Employee\` --> \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.Employee\` --> \`org.acme.hr@1.0.0.Department\`
   \`org.acme.hr@1.0.0.Employee\` --> \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr@1.0.0.Employee\` --> \`org.acme.hr@1.0.0.Equipment\`
   \`org.acme.hr@1.0.0.Employee\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.Contractor\`
   \`org.acme.hr@1.0.0.Contractor\` --> \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.Contractor\` --> \`org.acme.hr@1.0.0.Company\`
   \`org.acme.hr@1.0.0.Contractor\` --> \`org.acme.hr.base@1.0.0.Level\`
   \`org.acme.hr@1.0.0.Contractor\` --> \`org.acme.hr@1.0.0.Manager\`
   \`org.acme.hr@1.0.0.Manager\`
   \`org.acme.hr@1.0.0.Manager\` <--> \`org.acme.hr@1.0.0.Employee\`
   \`org.acme.hr@1.0.0.Manager\` --> \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.CompanyEvent\`
   \`org.acme.hr@1.0.0.CompanyEvent\` --> \`concerto@1.0.0.Event\`
   \`concerto@1.0.0.Event\`
   \`org.acme.hr@1.0.0.Onboarded\`
   \`org.acme.hr@1.0.0.Onboarded\` --> \`org.acme.hr@1.0.0.CompanyEvent\`
   \`org.acme.hr@1.0.0.Onboarded\` --> \`org.acme.hr@1.0.0.Employee\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\` --> \`concerto@1.0.0.Transaction\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\` --> \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\` --> \`org.acme.hr.base@1.0.0.Address\`
   \`concerto@1.0.0.Transaction\`
   \`org.acme.hr@1.0.0.KinName\`
   \`org.acme.hr@1.0.0.KinName\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.KinTelephone\`
   \`org.acme.hr@1.0.0\`
   \`org.acme.hr@1.0.0\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
"
`;

exports[`graph #visitor should visit a model manager and create a dependency graph 1`] = `
"flowchart LR
   \`org.acme.hr.base@1.0.0.Category\`
   \`org.acme.hr.base@1.0.0.Category\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr.base@1.0.0.GeneralCategory\` --> \`org.acme.hr.base@1.0.0.Category\`
   \`org.acme.hr.base@1.0.0.State\`
   \`org.acme.hr.base@1.0.0.State\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.TShirtSizeType\`
   \`org.acme.hr.base@1.0.0.TShirtSizeType\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.EmployeeTShirtSizes\`
   \`org.acme.hr.base@1.0.0.EmployeeTShirtSizes\` --> \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr.base@1.0.0.EmployeeTShirtSizes\` --> \`org.acme.hr.base@1.0.0.TShirtSizeType\`
   \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr.base@1.0.0.Address\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.Address\` --> \`org.acme.hr.base@1.0.0.State\`
   \`org.acme.hr.base@1.0.0.Level\`
   \`org.acme.hr.base@1.0.0.Level\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.Time\`
   \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr@1.0.0.pii\`
   \`org.acme.hr@1.0.0.pii\` --> \`concerto.decorator@1.0.0.Decorator\`
   \`org.acme.hr@1.0.0.pii\` --> \`org.acme.hr@1.0.0.Category\`
   \`org.acme.hr@1.0.0.Category\`
   \`org.acme.hr@1.0.0.Category\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.Info\`
   \`org.acme.hr@1.0.0.Info\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.Info\` --> \`org.acme.hr@1.0.0.pii\`
   \`org.acme.hr@1.0.0.Info\` --> \`org.acme.hr@1.0.0.Category\`
   \`org.acme.hr@1.0.0.CompanyProperties\`
   \`org.acme.hr@1.0.0.CompanyProperties\` --> \`String\`
   \`org.acme.hr@1.0.0.EmployeeLoginTimes\`
   \`org.acme.hr@1.0.0.EmployeeLoginTimes\` --> \`String\`
   \`org.acme.hr@1.0.0.EmployeeLoginTimes\` --> \`org.acme.hr.base@1.0.0.Time\`
   \`org.acme.hr@1.0.0.EmployeeSocialSecurityNumbers\`
   \`org.acme.hr@1.0.0.EmployeeSocialSecurityNumbers\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.EmployeeSocialSecurityNumbers\` --> \`String\`
   \`org.acme.hr@1.0.0.EmployeeSocialSecurityNumbers\` --> \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr@1.0.0.NextOfKin\`
   \`org.acme.hr@1.0.0.NextOfKin\` --> \`org.acme.hr@1.0.0.KinName\`
   \`org.acme.hr@1.0.0.NextOfKin\` --> \`org.acme.hr@1.0.0.KinTelephone\`
   \`org.acme.hr@1.0.0.EmployeeProfiles\`
   \`org.acme.hr@1.0.0.EmployeeProfiles\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.EmployeeProfiles\` --> \`String\`
   \`org.acme.hr@1.0.0.EmployeeProfiles\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.EmployeeDirectory\`
   \`org.acme.hr@1.0.0.EmployeeDirectory\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.EmployeeDirectory\` --> \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr@1.0.0.EmployeeDirectory\` --> \`org.acme.hr@1.0.0.Employee\`
   \`org.acme.hr@1.0.0.Company\`
   \`org.acme.hr@1.0.0.Company\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr@1.0.0.CompanyProperties\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr@1.0.0.EmployeeDirectory\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr.base@1.0.0.EmployeeTShirtSizes\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr@1.0.0.EmployeeProfiles\`
   \`org.acme.hr@1.0.0.Company\` --> \`org.acme.hr@1.0.0.EmployeeSocialSecurityNumbers\`
   \`org.acme.hr@1.0.0.Department\`
   \`org.acme.hr@1.0.0.Department\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.Department\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.Equipment\`
   \`org.acme.hr@1.0.0.Equipment\` --> \`concerto@1.0.0.Asset\`
   \`org.acme.hr@1.0.0.LaptopMake\`
   \`org.acme.hr@1.0.0.LaptopMake\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr@1.0.0.Laptop\`
   \`org.acme.hr@1.0.0.Laptop\` --> \`org.acme.hr@1.0.0.Equipment\`
   \`org.acme.hr@1.0.0.Laptop\` --> \`org.acme.hr@1.0.0.LaptopMake\`
   \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.Person\` --> \`concerto@1.0.0.Participant\`
   \`org.acme.hr@1.0.0.Person\` --> \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr@1.0.0.Person\` --> \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr@1.0.0.Person\` --> \`org.acme.hr@1.0.0.NextOfKin\`
   \`org.acme.hr@1.0.0.Employee\`
   \`org.acme.hr@1.0.0.Employee\` --> \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.Employee\` --> \`org.acme.hr@1.0.0.Department\`
   \`org.acme.hr@1.0.0.Employee\` --> \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr@1.0.0.Employee\` --> \`org.acme.hr@1.0.0.Equipment\`
   \`org.acme.hr@1.0.0.Employee\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.Contractor\`
   \`org.acme.hr@1.0.0.Contractor\` --> \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.Contractor\` --> \`org.acme.hr@1.0.0.Company\`
   \`org.acme.hr@1.0.0.Contractor\` --> \`org.acme.hr.base@1.0.0.Level\`
   \`org.acme.hr@1.0.0.Contractor\` --> \`org.acme.hr@1.0.0.Manager\`
   \`org.acme.hr@1.0.0.Manager\`
   \`org.acme.hr@1.0.0.Manager\` <--> \`org.acme.hr@1.0.0.Employee\`
   \`org.acme.hr@1.0.0.Manager\` --> \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.CompanyEvent\`
   \`org.acme.hr@1.0.0.CompanyEvent\` --> \`concerto@1.0.0.Event\`
   \`org.acme.hr@1.0.0.Onboarded\`
   \`org.acme.hr@1.0.0.Onboarded\` --> \`org.acme.hr@1.0.0.CompanyEvent\`
   \`org.acme.hr@1.0.0.Onboarded\` --> \`org.acme.hr@1.0.0.Employee\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\` --> \`concerto@1.0.0.Transaction\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\` --> \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\` --> \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr@1.0.0.KinName\`
   \`org.acme.hr@1.0.0.KinName\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.KinTelephone\`
   \`org.acme.hr@1.0.0\`
   \`org.acme.hr@1.0.0\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
"
`;

exports[`graph #visitor should visit find a connected subgraph 1`] = `
"flowchart LR
   \`org.acme.hr.base@1.0.0.Category\`
   \`org.acme.hr.base@1.0.0.Category\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr.base@1.0.0.GeneralCategory\` --> \`org.acme.hr.base@1.0.0.Category\`
   \`org.acme.hr.base@1.0.0.State\`
   \`org.acme.hr.base@1.0.0.State\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr.base@1.0.0.Address\` --> \`concerto@1.0.0.Concept\`
   \`org.acme.hr.base@1.0.0.Address\` --> \`org.acme.hr.base@1.0.0.State\`
   \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr@1.0.0.NextOfKin\`
   \`org.acme.hr@1.0.0.NextOfKin\` --> \`org.acme.hr@1.0.0.KinName\`
   \`org.acme.hr@1.0.0.NextOfKin\` --> \`org.acme.hr@1.0.0.KinTelephone\`
   \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.Person\` --> \`concerto@1.0.0.Participant\`
   \`org.acme.hr@1.0.0.Person\` --> \`org.acme.hr.base@1.0.0.Address\`
   \`org.acme.hr@1.0.0.Person\` --> \`org.acme.hr.base@1.0.0.SSN\`
   \`org.acme.hr@1.0.0.Person\` --> \`org.acme.hr@1.0.0.NextOfKin\`
   \`concerto@1.0.0.Participant\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\` --> \`concerto@1.0.0.Transaction\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\` --> \`org.acme.hr@1.0.0.Person\`
   \`org.acme.hr@1.0.0.ChangeOfAddress\` --> \`org.acme.hr.base@1.0.0.Address\`
   \`concerto@1.0.0.Transaction\`
   \`org.acme.hr@1.0.0.KinName\`
   \`org.acme.hr@1.0.0.KinName\` --> \`org.acme.hr.base@1.0.0.GeneralCategory\`
   \`org.acme.hr@1.0.0.KinTelephone\`
"
`;
